--- a/react-ref/src/index.css
+++ b/react-ref/src/index.css
@@ -26,6 +26,8 @@
 }
 * {
 	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
 }
 a {
 	font-weight: 500;
